<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvaddnewadmin"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/editTextAdminName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edfull_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextAdminEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edemail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/editTextAdminPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edpassword"
            android:inputType="textPassword"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/buttonInsertAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnadd_admin"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</ScrollView>
