<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="49dp"
        android:gravity="center"
        android:text="@string/AppTitle"
        android:textColor="@color/UseBlue"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="22dp"
        android:text="@string/AboutUsTitle"
        android:textColor="@color/UseBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/description"
        android:layout_width="262dp"
        android:layout_height="0dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="82dp"
        android:fontFamily="sans-serif-medium"
        android:scrollbars="vertical"
        android:text="@string/AboutUs"
        android:textColor="#555555"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_signup_border"
        android:backgroundTint="#4B6EA9"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/btnSignUp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="107dp"
        android:background="@drawable/button_login_border"
        android:backgroundTint="#FADBD5D5"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/btnLogin"
        android:textAllCaps="false"
        android:textColor="#4B6EA9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />


</androidx.constraintlayout.widget.ConstraintLayout>


